Moved sector size config into matrix.ini.

--- a/data/scenes/cave/matrix.ini
+++ b/data/scenes/cave/matrix.ini
@@ -7,6 +7,10 @@ obstacles = gfx/obstacles.py
 [matrix]
 data_path = matrix
 
+[layer.sector]
+size = 10, 10
+;cache_path = matrix.cache
+
 [layer.names]
 1 = passability
 5 = background
